add binding markers

--- a/packages/web-components/fast-html/src/fixtures/slotted/slotted.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/slotted/slotted.fixture.html
@@ -15,9 +15,9 @@
         </f-template>
         <test-element>
             <template shadowrootmode="open">
-                <slot></slot>
-                <slot name="foo" data-fe-b-0></slot>
-                <slot name="bar"></slot>
+                <slot data-fe-b-0></slot>
+                <slot name="foo" data-fe-b-1></slot>
+                <slot name="bar" data-fe-b-2></slot>
             </template>
             <div>Slotted</div>
             Not slotted
