--- a/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
@@ -10,6 +10,9 @@
             <observer-map-test-element></observer-map-test-element>
             <f-template name="observer-map-test-element">
                 <template>
+                    <observer-map-internal-test-element
+                        :selecteduserid="{{selectedUserId}}"
+                    ></observer-map-internal-test-element>
                     <div class="stats">
                         <h2>Global Stats</h2>
                         <div class="nested-info">
@@ -114,6 +117,11 @@
                             </div>
                         </f-repeat>
                     </div>
+                </template>
+            </f-template>
+            <f-template name="observer-map-internal-test-element">
+                <template>
+                    {{selecteduserid}} <!-- because this is bound to an attribute property it must be lowercase -->
                 </template>
             </f-template>
         </div>
