--- a/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
@@ -12,6 +12,7 @@
                 <template>
                     <observer-map-internal-test-element
                         :selecteduserid="{{selectedUserId}}"
+                        :totalusers="{{stats.totalUsers}}"
                     ></observer-map-internal-test-element>
                     <div class="stats">
                         <h2>Global Stats</h2>
@@ -121,7 +122,10 @@
             </f-template>
             <f-template name="observer-map-internal-test-element">
                 <template>
-                    {{selecteduserid}} <!-- because this is bound to an attribute property it must be lowercase -->
+                    selected user: {{selecteduserid}} <!-- because this is bound to an attribute property it must be lowercase -->
+                    <br>
+                    total users: {{totalusers}}
+                    <br>
                     <f-when value="{a}">
                         <span class="nested-define">{{a.b.c}}</span>
                     </f-when>
