--- a/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
@@ -140,6 +140,24 @@
                     </f-when>
                     <button @click="{defineY()}">Define Y</button>
                     <button @click="{updateZ()}">Update Z</button>
+                    <div>
+                        <f-repeat value="{{group in groups}}">
+                            <f-repeat value="{{item in group.items}}">
+                                <div class="item">{{item.text}}</div>
+                                <span>
+                                    <f-repeat value="{{action in item.actions.trailing}}">
+                                        <span class="action-label">{{action.label}}</span>
+                                    </f-repeat>
+                                </span>
+                            </f-repeat>
+                        </f-repeat>
+                    </div>
+                    <button @click="{removeAllItems()}">Remove all items</button>
+                    <button @click="{addAnItem()}">Add an item</button>
+                    <button @click="{updateAnItem()}">Update an item</button>
+                    <button @click="{removeGroup()}">Remove groups</button>
+                    <button @click="{addGroup()}">Add group</button>
+                    <button @click="{updateActionLabel()}">Update an action label</button>
                 </template>
             </f-template>
         </div>
